[package]
name = "vorarbeiter"
description = "A small process supervisor that shutdowns child processes"
documentation = "https://docs.rs/vorarbeiter"
repository = "https://github.com/mbr/vorarbeiter-rs"
version = "0.1.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"


[dependencies]
nix = "0.19.1"
signal-hook = "0.2.1"
